--- a/floorbarre.Rmd
+++ b/floorbarre.Rmd
@@ -3,6 +3,9 @@ title: "Mon approche de la barre au sol"
 description: "La barre au sol vue par Marine Olivari"
 ---
 
+:::: {style="display: grid; grid-template-columns: 1fr 1fr; grid-column-gap: 10px;"}
+
+::: {}
 
 La barre au sol permet de travailler le muscle en longueur et en profondeur. La position au sol permet de s’affranchir des contraintes d’équilibre et de gestion du poids du corps pour se concentrer sur le placement, les directions et la respiration.
 
@@ -13,6 +16,16 @@ Le cours se poursuit avec plusieurs répétitions de mouvements issus de la dans
 Cette structure de cours s’inspire de la méthode Boris Kniaseff, créateur de la barre au sol.
 
 Ce que j’essaie de valoriser dans mon cours, c’est une pratique tous niveaux où les débutants peuvent travailler les formes, les mouvements et le placement de la danse classique, tandis que des pratiquants plus avancés vont pouvoir peaufiner leur technique, la qualité et la précision du mouvement, la coordination, la force et la souplesse.
- 
 
 La barre au sol s’apparente à la danse, tout le cours se fait en musique et j’utilise différents styles musicaux, adaptés aux exercices pour travailler la musicalité du mouvement.
+
+:::
+
+::: {}
+
+![Marine Olivari](img/Photo_Marine_Olivari_mosaique.jpg){ width=200px }
+
+
+:::
+
+::::
