--- a/education.Rmd
+++ b/education.Rmd
@@ -3,22 +3,20 @@ title: "Formation et pratique"
 description: "Formation et pratique de la danse"
 ---
 
-:::: {style="display: grid; grid-template-columns: 1fr 1fr; grid-column-gap: 10px;"}
+<div class = "row">
+<div class = "col-sm-8">
 
-::: {}
 
 
 **Professeure de danse diplômée d’État depuis 2007, Marine Olivari a suivi sa formation à l’école Epsedanse de Montpellier.**
 
 Après plusieurs années de pratique intensive de la danse, j’ai découvert la barre au sol ce qui fût une révélation dans mon approche de la danse et de la pédagogie.
 
-:::
-
-::: {}
+</div>
+<div class = "col-sm-4">
 
 ![Marine Olivari](img/marine_danse.webp){ width=200px }
 
+</div>
+</div>
 
-:::
-
-::::
