--- a/horaires.Rmd
+++ b/horaires.Rmd
@@ -13,12 +13,17 @@ Plusieurs formats de cours sont proposés :
 
 ## Cours collectifs tous publics {#cours_collectifs}
 
-Cours de barre au sol au Studio Cambronne
+Cours de barre au sol au Studio Cambronne, nombre de places limité.
 
+- lundi à 20h
 - mardi à 20h
-- jeudi à 19h30
 
-Tarif 15€
+
+Tarif à l'unité 19€
+
+Abonnement annuel 640€ soit 40 cours à 16€ le cours et **place garantie toute l'année**.
+
+
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2625.601448525861!2d2.2948280154248675!3d48.846740409481356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e670178c1c5dfd%3A0xcdeddcd81b7dd27f!2s71%20Rue%20Fondary%2C%2075015%20Paris!5e0!3m2!1sen!2sfr!4v1646055588981!5m2!1sen!2sfr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
@@ -26,9 +31,7 @@ Tarif 15€
 
 Cours réguliers sur Zoom 
 
-
-- jeudi 19h30
-- dimanche 10h15
+- dimanche 10h30
 
 Tarif 10€
 
@@ -38,7 +41,6 @@ Cours en entreprise via Zoom ou dans les locaux, par l'intermédiaire de l'assoc
 
 - L'ANSM : 2 types de cours proposés 1) barre au sol 2) renforcement musculaire + stretching
 - Le Sénat : 2 types de cours proposés 1) modern-jazz 2) renforcement musculaire + stretching)
-- Le Figaro : barre au sol
 
 **N'hésitez pas à me contacter pour que je vienne donner des cours dans votre entreprise**
 
@@ -48,7 +50,7 @@ Possibilité de cours particuliers flexibles ou réguliers de barre au sol ou re
 
 Les cours ont lieu sur Zoom ou chez vous selon votre préférence.
 
-Tarif 50€
+Tarif 60€ sur place et 50€ sur Zoom.
 
 [Me contacter](contact) par email ou téléphone pour plus d'informations.
 
@@ -57,4 +59,6 @@ Tarif 50€
 - Par chèque
 - Par virement bancaire
 - En espèce pour les cours présentiels
+
+Facture sur demande pour prise en charge par votre comité d'entreprise.
 
