--- a/horaires.Rmd
+++ b/horaires.Rmd
@@ -17,7 +17,7 @@ Cours de barre au sol au Studio Cambronne, nombre de places limité.
 
 - lundi à 20h
 - mardi à 20h
-
+- NOUVEAU : samedi à 19h
 
 Tarif à l'unité 19€
 
