--- a/index.Rmd
+++ b/index.Rmd
@@ -6,10 +6,14 @@ description: "Le site professionnel de Marine Olivari, professeur de Danse, de b
 <div class = "row">
 <div class = "col-sm-8">
 
+<div class="alert alert-info" role="alert">
+  <strong>Nouveau cours :</strong> le samedi à 10h au <a href="https://www.studiocambronne.com/mol" target="_blank">Studio Cambronne</a>.
+</div>
+
 
 Je donne des cours de danse Modern-Jazz et de [barre au sol](floorbarre.html), mais également des cours de renforcement musculaire et stretching pour adultes de tous niveaux.
 
-Les cours collectifs ont lieu sur Zoom ou au [Studio Cambronne](https://www.studiocambronne.com/enseignants/marine_olivari.html){target="_blank"} situé [71 Rue Fondary, 75015 Paris](https://goo.gl/maps/Ayt4KuaAHZLjuoz36){target="_blank"}.
+Les cours collectifs ont lieu sur Zoom ou au [Studio Cambronne](https://www.studiocambronne.com/mol){target="_blank"} situé [71 Rue Fondary, 75015 Paris](https://goo.gl/maps/Ayt4KuaAHZLjuoz36){target="_blank"}.
 
 Je donne aussi des cours particuliers sur demande. [Voir l'onglet Contact](contact.html).
 
